Support spaces and lowercase

--- a/NeonFox_Macro_Assembler/changelog.txt
+++ b/NeonFox_Macro_Assembler/changelog.txt
@@ -44,3 +44,8 @@ Revision 4:
 Revision 5:
 	Created new NeonFox_Macro_Assembler project from NeonFox_Assembler.
 	Added code to handle macros in preprocessor pass.
+	Added support for lowercase file names and char literals.
+	Addes support for spaces in file names and char literals.
+	Removed unused parameters in multiple functions.
+	Cleaned up code (added explicit type conversions to avoid warnings).
+	
