--- a/NeonFox_Macro_Assembler/changelog.txt
+++ b/NeonFox_Macro_Assembler/changelog.txt
@@ -49,3 +49,6 @@ Revision 5:
 	Removed unused parameters in multiple functions.
 	Cleaned up code (added explicit type conversions to avoid warnings).
 	
+Revision 6:
+    Added support for labels on macro references.
+	
